--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python = "^3.10"
 blue = "^0.9.1"
 isort = "^5.12.0"
 taskipy = "^1.12.0"
+ipykernel = "^6.26.0"
 
 [build-system]
 requires = ["poetry-core"]
